--- a/DRRadiov3/res/values/dr_styles.xml
+++ b/DRRadiov3/res/values/dr_styles.xml
@@ -5,6 +5,7 @@
   <style name="Theme.Dr" parent="@style/Theme.AppCompat.Light">
     <item name="actionBarStyle">@style/ActionBar.Solid.Dr</item>
     <item name="android:windowBackground">@color/hvid</item>
+    <item name="homeAsUpIndicator">@drawable/abc_ic_ab_back_holo_dark</item>
     <!--
     <item name="android:windowActionBarOverlay">true</item>
     <item name="windowActionBarOverlay">true</item>
