--- a/DRRadiov3/res/layout/kanal_elem0_aktuel_udsendelse.xml
+++ b/DRRadiov3/res/layout/kanal_elem0_aktuel_udsendelse.xml
@@ -16,16 +16,16 @@
   <include
       layout="@layout/kanal_elem0_inkl_billede_titel"
       android:layout_marginTop="16dp"
-      android:layout_marginLeft="16dp"
-      android:layout_marginRight="16dp"
+      android:layout_marginLeft="@dimen/kanalmargen"
+      android:layout_marginRight="@dimen/kanalmargen"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
 
 
   <FrameLayout
       android:layout_width="match_parent"
-      android:paddingLeft="16dp"
-      android:paddingRight="16dp"
+      android:paddingLeft="@dimen/kanalmargen"
+      android:paddingRight="@dimen/kanalmargen"
       android:layout_height="wrap_content">
 
     <LinearLayout
