--- a/DRRadiov3/res/values/dimens.xml
+++ b/DRRadiov3/res/values/dimens.xml
@@ -8,7 +8,8 @@
   <dimen name="kanalvalg_tekststr">20sp</dimen>
 
   <dimen name="kanalvisning_aktuelUdsendelse_topmargen">0dp</dimen>
-  <dimen name="hørknap_højde">44dp</dimen>
+  <!-- små skærme skal have lille 'spil'-knap. Dens trykområde bliver udvidet til 44dp af en TouchDelegate -->
+  <dimen name="hørknap_højde">36dp</dimen>
   <dimen name="hørknap_udvidet_klikområde">12dp</dimen>
   <dimen name="afspiller_kollapset_højde">56dp</dimen>
 
