--- a/DRRadiov3/res/layout/kanal_elem0_aktuel_udsendelse.xml
+++ b/DRRadiov3/res/layout/kanal_elem0_aktuel_udsendelse.xml
@@ -9,77 +9,40 @@
     android:descendantFocusability="blocksDescendants"
     >
   <!--
+      android:layerType="software" er nødvendig,
+      ellers tegnes der en vandret streg i stedet for stiplet linje på Android 3+
+      -->
+
+  <View
+      android:id="@+id/stiplet_linje"
+      android:background="@drawable/stiplet_linje_med_margen"
+      android:layerType="software"
+      android:layout_width="match_parent"
+      android:layout_height="3dp"/>
+  <!--
               android:descendantFocusability="blocksDescendants"
               gør at knappen her ikke tager fokus for hele listeelementet
   -->
 
+  <TextView
+      android:id="@+id/startid"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:paddingLeft="16dp"
+      android:text="17.04"
+      android:textColor="@color/grå40"
+      android:textAppearance="?android:attr/textAppearance"
+      tools:ignore="HardcodedText"
+      />
+
   <include
       layout="@layout/kanal_elem0_inkl_billede_titel"
-      android:layout_marginTop="16dp"
+      android:layout_marginTop="4dp"
       android:layout_marginLeft="@dimen/kanalmargen"
       android:layout_marginRight="@dimen/kanalmargen"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
 
-
-  <FrameLayout
-      android:layout_width="match_parent"
-      android:paddingLeft="@dimen/kanalmargen"
-      android:paddingRight="@dimen/kanalmargen"
-      android:layout_height="wrap_content">
-
-    <LinearLayout
-        android:id="@+id/tidsbjælke"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-      <TextView
-          android:id="@+id/starttidbjælke"
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:layout_weight="74"
-          android:textSize="12sp"
-          android:background="@color/grå60"/>
-
-      <TextView
-          android:id="@+id/slutttidbjælke"
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:layout_weight="26"
-          android:textColor="@color/hvid"
-          android:textSize="12sp"
-          android:background="@color/grå20"/>
-      <!--
-                             android:textAppearance="?android:attr/textAppearanceLarge"
-
-      -->
-    </LinearLayout>
-
-
-    <TextView
-        android:id="@+id/startid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="16.10"
-        android:textColor="@color/hvid"
-        android:textSize="12sp"
-        android:layout_marginLeft="4dp"
-        android:layout_gravity="left"
-        tools:ignore="HardcodedText"/>
-
-    <TextView
-        android:id="@+id/slutttid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="16.30"
-        android:importantForAccessibility="no"
-        android:layout_gravity="right"
-        android:layout_marginRight="4dp"
-        android:textColor="@color/hvid"
-        android:textSize="12sp"
-        tools:ignore="HardcodedText"/>
-  </FrameLayout>
 
 
   <LinearLayout
@@ -88,23 +51,14 @@
       android:id="@+id/senest_spillet_container"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:background="@color/grå10"
+      android:background="@color/grå60"
       android:padding="8dp"
       android:orientation="horizontal">
 
-    <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:adjustViewBounds="true"
-        android:id="@+id/senest_spillet_kunstnerbillede"
-        android:src="@drawable/eksempel_kunstner"
-        tools:ignore="ContentDescription"/>
-
-
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="60dp"
-        android:layout_marginLeft="8dp"
         android:orientation="vertical">
 
 
@@ -113,7 +67,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="SENEST SPILLET"
-          android:textColor="@color/grå70"
+          android:textColor="@color/grå10"
           tools:ignore="HardcodedText"
           />
 
@@ -123,10 +77,20 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="Feel Again One | Republic"
+          android:textColor="@color/hvid"
           android:maxLines="2"
           tools:ignore="HardcodedText"/>
 
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="8dp"
+        android:adjustViewBounds="true"
+        android:id="@+id/senest_spillet_kunstnerbillede"
+        android:src="@drawable/eksempel_kunstner"
+        tools:ignore="ContentDescription"/>
 
   </LinearLayout>
 
