--- a/DRRadiov3/res/layout/kanal_frag.xml
+++ b/DRRadiov3/res/layout/kanal_frag.xml
@@ -30,6 +30,7 @@ http://stackoverflow.com/questions/2949407/can-i-increase-a-buttons-onclick-area
 <FrameLayout android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
+             android:background="@drawable/knap_graa10_bg"
           >
 
   <dk.dr.radio.diverse.PinnedSectionListView
