--- a/DRRadiov3/res/layout/kanal_elem0_inkl_billede_titel.xml
+++ b/DRRadiov3/res/layout/kanal_elem0_inkl_billede_titel.xml
@@ -2,8 +2,9 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:id="@+id/billedecontainer"
+    android:layout_width="320dp"
+    android:layout_height="180dp"
     >
 
 
