--- a/DRRadiov3/res/layout/senest_lyttede.xml
+++ b/DRRadiov3/res/layout/senest_lyttede.xml
@@ -1,34 +1,26 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
-
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:orientation="vertical"
-      android:layout_height="match_parent">
-
-    <View
-        android:background="@color/sort"
-        android:layerType="software"
-        android:layout_width="match_parent"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_height="3dp"/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/overskrift"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginTop="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Senest lyttede"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textAllCaps="true"
         android:textStyle="bold"
         />
+
+  <View
+      android:background="@color/grå60"
+      android:layerType="software"
+      android:layout_width="match_parent"
+      android:layout_height="3dp"/>
 
     <ListView
         android:id="@+id/listView"
@@ -56,6 +48,5 @@ For mere kompleks tomhedsindikator, brug ViewStub - se
         android:padding="20dp"
         android:text="Indlæser, vent venligst..."
         android:textSize="18sp"/>
-  </LinearLayout>
+</LinearLayout>
 
-</FrameLayout>
