--- a/DRRadiov3/res/values-small/dimens.xml
+++ b/DRRadiov3/res/values-small/dimens.xml
@@ -3,4 +3,5 @@
   <dimen name="kanalvisning_aktuelUdsendelse_topmargen">-10dp</dimen>
   <!-- små skærme skal have lille 'spil'-knap. Dens trykområde bliver udvidet til 44dp af en TouchDelegate -->
   <dimen name="hørknap_højde">24dp</dimen>
+  <dimen name="venstremenu_padding">12dp</dimen>
 </resources>
