--- a/DRRadiov3/res/layout/udsendelse_frag.xml
+++ b/DRRadiov3/res/layout/udsendelse_frag.xml
@@ -2,10 +2,11 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
-  <dk.dr.radio.diverse.PinnedSectionListView
+  <ListView
       android:id="@+id/listView"
       android:divider="@null"
       android:dividerHeight="0px"
+      android:fastScrollEnabled="true"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"/>
   <!--
