--- a/DRRadiov3/res/layout/venstremenu_elem_favoritprogrammer.xml
+++ b/DRRadiov3/res/layout/venstremenu_elem_favoritprogrammer.xml
@@ -2,7 +2,9 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
-              android:padding="16dp"
+              android:paddingLeft="16dp"
+              android:paddingTop="@dimen/venstremenu_padding"
+              android:paddingBottom="@dimen/venstremenu_padding"
     >
 
   <TextView
