--- a/DRRadiov3/res/layout/venstremenu_elem_overskrift.xml
+++ b/DRRadiov3/res/layout/venstremenu_elem_overskrift.xml
@@ -1,7 +1,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:padding="16dp"
+          android:paddingLeft="16dp"
+          android:paddingTop="@dimen/venstremenu_padding"
+          android:paddingBottom="@dimen/venstremenu_padding"
           android:text="Senest lyttede"
           android:textStyle="bold"
           android:id="@+id/tekst"/>
