--- a/DRRadiov3/res/layout/afspiller_frag.xml
+++ b/DRRadiov3/res/layout/afspiller_frag.xml
@@ -101,7 +101,7 @@
         android:layout_width="match_parent" android:layout_height="wrap_content"
         android:gravity="center_vertical">
       <TextView
-          android:id="@+id/startid"
+          android:id="@+id/starttid"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="16.10"
