--- a/DRRadiov3/res/layout/kanal_elem0_aktuel_udsendelse.xml
+++ b/DRRadiov3/res/layout/kanal_elem0_aktuel_udsendelse.xml
@@ -25,7 +25,7 @@
   -->
 
   <TextView
-      android:id="@+id/startid"
+      android:id="@+id/starttid"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingLeft="16dp"
