--- a/DRRadiov3/res/layout/udsendelse_elem2_playlisteelem_nu.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem2_playlisteelem_nu.xml
@@ -25,7 +25,7 @@
 
 
       <TextView
-          android:id="@+id/startid"
+          android:id="@+id/starttid"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="17.04"
