--- a/DRRadiov3/res/layout/hentede_udsendelser_listeelem_2linjer.xml
+++ b/DRRadiov3/res/layout/hentede_udsendelser_listeelem_2linjer.xml
@@ -47,10 +47,9 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="17.04"
-          android:textColor="@color/sort"
-          android:textAppearance="?android:attr/textAppearance"
           tools:ignore="HardcodedText"
-          />
+          android:textSize="@dimen/metainfo_skrifstørrelse"
+          android:textColor="@color/grå50"/>
 
       <ProgressBar
           style="?android:attr/progressBarStyleHorizontal"
