Logik til hør_tekst og andre tekster på udsendelsesside er på plads Småting

--- a/DRRadiov3/res/layout/udsendelse_elem0_inkl_billede_titel.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem0_inkl_billede_titel.xml
@@ -95,6 +95,18 @@
 
   </RelativeLayout>
 
+  <TextView
+      android:id="@+id/hør_tekst"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginRight="16dp"
+      android:layout_marginBottom="16dp"
+      android:layout_gravity="bottom|right"
+      android:textColor="@color/hvid"
+      android:background="@color/sort"
+      android:text="Kan endnu\nikke afspilles"
+      android:textSize="12sp"
+      />
   <ImageButton
       android:id="@+id/hør"
       android:layout_width="wrap_content"
