--- a/DRRadiov3/res/layout/kanal_elem2_tidligere_senere.xml
+++ b/DRRadiov3/res/layout/kanal_elem2_tidligere_senere.xml
@@ -19,6 +19,8 @@
 
   <TextView
       android:id="@+id/titel"
+      android:textColor="@color/blå"
+      android:gravity="center"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Tidligere"
