--- a/DRRadiov3/res/layout/udsendelse_elem1_overskrift_playliste_info.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem1_overskrift_playliste_info.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
+    android:paddingBottom="8dp"
     android:background="@color/hvid"
     android:orientation="horizontal">
 
