--- a/DRRadiov3/res/layout/udsendelse_elem7_vis_hele_playlisten_knap.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem7_vis_hele_playlisten_knap.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button
+<TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/vis_hele_playlisten"
     tools:ignore="HardcodedText"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:textColor="@color/blå"
+    android:gravity="center"
+    android:background="@drawable/elem_hvid_bg"
     android:text="VIS HELE PLAYLISTEN"
     android:contentDescription="vis hele playlisten"
-    android:textColor="@color/hvid"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
+    android:padding="16dp"
     />
-
