--- a/DRRadiov3/res/layout/programserie_elem0_top.xml
+++ b/DRRadiov3/res/layout/programserie_elem0_top.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@drawable/knap_graa10_bg"
     >
 
   <ImageView
@@ -69,23 +68,27 @@
       />
 
   <View
-      android:background="@color/sort"
-      android:layerType="software"
+      android:background="@color/grå50"
+      android:layout_marginTop="8dp"
+      android:layout_marginBottom="8dp"
       android:layout_width="match_parent"
-      android:layout_margin="16dp"
-      android:layout_height="3dp"/>
+      android:layout_height="1dp"/>
 
 
   <TextView
       android:id="@+id/alle_udsendelser"
       android:layout_marginLeft="16dp"
-      android:layout_marginRight="16dp"
-      android:layout_marginBottom="16dp"
+      android:textColor="@color/grå50"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="ALLE UDSENDELSER (12)"
-      android:textAppearance="?android:attr/textAppearanceLarge"
-      android:textStyle="bold"/>
+      android:text="ALLE UDSENDELSER (12)"/>
+
+  <View
+      android:background="@color/grå50"
+      android:layout_marginTop="8dp"
+      android:layout_marginBottom="8dp"
+      android:layout_width="match_parent"
+      android:layout_height="1dp"/>
 
 
 </LinearLayout>
