--- a/DRRadiov3/res/layout/udsendelse_elem3_playlisteelem.xml
+++ b/DRRadiov3/res/layout/udsendelse_elem3_playlisteelem.xml
@@ -61,7 +61,7 @@
         android:id="@+id/hør"
         android:src="@drawable/dri_lyd_blaa"
         tools:ignore="ContentDescription"/>
-  </LinearLayout>½
+  </LinearLayout>
 
 
   <!--
