Småting og fix for lille fejl i A-Å

--- a/DRRadiov3/res/layout/venstremenu_elem_overskrift.xml
+++ b/DRRadiov3/res/layout/venstremenu_elem_overskrift.xml
@@ -4,7 +4,7 @@
           android:paddingLeft="16dp"
           android:paddingTop="@dimen/venstremenu_padding"
           android:paddingBottom="@dimen/venstremenu_padding"
-          android:text="Senest lyttede"
+          android:text="Senest lyttede x"
           android:textStyle="bold"
           android:id="@+id/tekst"/>
     <!--
