--- a/DRRadiov3/res/xml/indstillinger_udvikling.xml
+++ b/DRRadiov3/res/xml/indstillinger_udvikling.xml
@@ -12,8 +12,14 @@
                       android:title="Til udvikling og fejlfinding">
 
       <CheckBoxPreference
+          android:key="afspillerlyde" android:title="Afspillerlyde"
+          android:summaryOn="Afspil lyde, der fortæller når en afspilning starter og slutter"
+          />
+
+
+      <CheckBoxPreference
           android:key="exoplayer" android:title="ExoPlayer"
-          android:summaryOn="Den nye ExoPlayer benyttes!"
+          android:summaryOn="Den nye ExoPlayer benyttes. Nogle funktioner, bl.a. valg af musiknummer, og at en udsende fortsætter hvor den sidst blev stoppet, er ikke implementeret"
           android:summaryOff="Den indbyggede MediaPlayer benyttes"/>
 
 
