--- a/DRRadiov3/res/values/SKAL_IKKE_I_SVN.xml
+++ b/DRRadiov3/res/values/SKAL_IKKE_I_SVN.xml
@@ -6,4 +6,7 @@
   <!-- Indsæt din egen BugSense-nøgle her -->
   <string name="bugsense_nøgle">00000000</string>
   <string name="bugsense_testnøgle">00000000</string>
+
+  <!-- Nøgle til sidevisningsstatistik -->
+  <string name="gemius_sidevisninsstatistik_nøgle"></string>
 </resources>
