--- a/DRRadiov3/res/values-v11/dr_styles.xml
+++ b/DRRadiov3/res/values-v11/dr_styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
-
+<!--
   <style name="Theme.Dr" parent="@style/Theme.AppCompat.Light">
     <item name="android:actionBarStyle">@style/ActionBar.Solid.Dr</item>
     <item name="android:windowBackground">@color/hvid</item>
@@ -11,6 +11,14 @@
   <style name="ActionBar.Solid.Dr" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
     <item name="android:background">@color/grå70</item>
     <item name="android:displayOptions">showHome|useLogo</item>
+  </style>
+-->
+
+  <style name="Theme.Indstillinger" parent="android:style/Theme.Holo.Light">
+    <item name="android:windowBackground">@color/hvid</item>
+    <item name="android:windowNoTitle">false</item>
+    <item name="android:windowActionBar">true</item>
+    <item name="windowActionBar">true</item>
   </style>
 
 </resources>
