--- a/DRRadiov3/res/values/dr_styles.xml
+++ b/DRRadiov3/res/values/dr_styles.xml
@@ -5,7 +5,9 @@
   <style name="Theme.Dr" parent="@style/Theme.AppCompat.Light">
     <item name="actionBarStyle">@style/ActionBar.Solid.Dr</item>
     <item name="android:windowBackground">@color/hvid</item>
+    <!--
     <item name="homeAsUpIndicator">@drawable/abc_ic_ab_back_holo_dark</item>
+    -->
     <!--
     <item name="android:windowActionBarOverlay">true</item>
     <item name="windowActionBarOverlay">true</item>
@@ -15,6 +17,13 @@
   <style name="ActionBar.Solid.Dr" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
     <item name="background">@color/grå70</item>
     <item name="displayOptions">showHome|useLogo</item>
+  </style>
+
+  <style name="Theme.Indstillinger" parent="@android:style/Theme.Light">
+    <item name="android:windowBackground">@color/hvid</item>
+    <item name="android:windowNoTitle">false</item>
+    <item name="android:windowActionBar">true</item>
+    <item name="windowActionBar">true</item>
   </style>
 
 </resources>
