android:versionName="3.1.10 4 dec prio1 - afspiller 124" Prioritet 1: Nyt design i afspilleropråde med grafisk kanallogo Prioritet 2: Udsendelse: “Kan endnu ikke afspilles!” -> “Kan ikke afspilles” småting

--- a/DRRadiov3/res/layout/afspiller_laaseskaerm_skrald.xml
+++ b/DRRadiov3/res/layout/afspiller_laaseskaerm_skrald.xml
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content">
 
       <ImageView
-          android:id="@+id/logo"
+          android:id="@+id/kanallogo"
           android:layout_width="64dp"
           android:layout_height="44dp"
           android:scaleType="center"
