--- a/DRRadiov3/res/layout/afspiller_frag.xml
+++ b/DRRadiov3/res/layout/afspiller_frag.xml
@@ -12,10 +12,6 @@
       android:layout_height="@dimen/afspiller_kollapset_højde"
       android:contentDescription="afspillerkontrol"
       android:gravity="center_vertical"
-      android:paddingLeft="8dp"
-      android:paddingRight="8dp"
-      android:paddingTop="4dp"
-      android:paddingBottom="4dp"
       android:orientation="horizontal">
 
 
@@ -24,6 +20,8 @@
         android:layout_height="44dp"
         android:scaleType="center"
         android:contentDescription="start/stop"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         android:id="@+id/startStopKnap"
         android:src="@drawable/afspiller_spil"
         />
@@ -47,25 +45,26 @@
         android:orientation="vertical">
 
       <TextView
-          android:id="@+id/titel"
+          android:id="@+id/kanallogoOgDirektetekst"
           android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="x P3 Live"
-          android:textAppearance="?android:attr/textAppearanceSmall"
-          android:textStyle="bold"
-          android:maxLines="2"
+          android:layout_height="28dp"
+          android:text=" LIVE"
+          android:gravity="center_vertical"
           tools:ignore="HardcodedText"
-          android:textColor="@color/hvid"/>
+          android:drawableLeft="@drawable/kanalappendix_ab4"
+          android:textColor="@color/grå40"
+          />
+
 
       <TextView
           android:id="@+id/metainformation"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:textAppearance="?android:attr/textAppearanceSmall"
-          android:text="x P3"
+          android:textSize="@dimen/metainfo_skrifstørrelse"
+          android:text="Orientering på P1"
           android:singleLine="true"
           tools:ignore="HardcodedText"
-          android:textColor="@color/blå"/>
+          android:textColor="@color/hvid"/>
 
     </LinearLayout>
 
@@ -76,9 +75,10 @@
         />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:layout_width="44dp"
+        android:layout_height="match_parent"
+        android:padding="12dp"
+        android:scaleType="centerInside"
         android:id="@+id/udvidSkjulKnap"
         android:src="@drawable/dri_pil_op_graa40"/>
 
@@ -144,14 +144,16 @@
 
       <ImageView
           android:id="@+id/forrige"
-          android:src="@drawable/dri_radio_forrige_graa40"
           android:layout_marginRight="16dp"
+          android:src="@drawable/dri_radio_forrige_graa40"
+          android:padding="12dp"
           android:layout_width="44dp"
           android:layout_height="44dp"/>
 
       <ImageView
           android:id="@+id/næste"
           android:src="@drawable/dri_radio_naeste_graa40"
+          android:padding="12dp"
           android:layout_width="44dp"
           android:layout_height="44dp"/>
 
@@ -177,14 +179,16 @@
 
       <ImageView
           android:src="@drawable/dri_lyd_graa40"
-          android:layout_margin="4dp"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"/>
+          android:padding="4dp"
+          android:layout_width="32dp"
+          android:layout_height="32dp"/>
 
       <SeekBar
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
+          android:layout_marginTop="16dp"
+          android:layout_marginBottom="16dp"
           android:id="@+id/lydstyrke"
           android:max="100"
           android:progress="60"
@@ -194,10 +198,10 @@
 
       <ImageView
           android:src="@drawable/dri_indstillinger_graa40"
-          android:layout_margin="4dp"
           android:visibility="invisible"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"/>
+          android:padding="4dp"
+          android:layout_width="44dp"
+          android:layout_height="44dp"/>
 
 
     </LinearLayout>
