--- a/DRRadiov3/res/layout/programserie_elem0_top.xml
+++ b/DRRadiov3/res/layout/programserie_elem0_top.xml
@@ -20,7 +20,7 @@
 
 
   <ImageView
-      android:id="@+id/logo"
+      android:id="@+id/kanallogo"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="16dp"
