android:versionName="3.1.10 4 dec design prio3-6  127" Prioritet 3: Sort ekst i sted for grå i venstremenu og andre steder - metadata stadig grå - OK Prioritet 4: “Senest lyttet” - “Lyttet i forgårs…. “ -> “LYTTET I FORGÅRS…” - Streger mangler i de to øverste? - OK Prioritet 5: Store bogstaver på knapper - i vækning - OK Prioritet 6: Kanalvisning fjern “ LIVE” fra “HØR P3 LIVE” og endnu mere hvidt over og under HØR-knap: - OK (og liggende visning)

--- a/DRRadiov3/res/layout/kanal_frag.xml
+++ b/DRRadiov3/res/layout/kanal_frag.xml
@@ -15,15 +15,13 @@ http://stackoverflow.com/questions/2949407/can-i-increase-a-buttons-onclick-area
       android:id="@+id/hør_live"
       android:layout_width="wrap_content"
       android:layout_height="@dimen/hørknap_højde"
-      android:layout_marginLeft="16dp"
-      android:layout_marginRight="16dp"
-      android:layout_marginTop="6dp"
-      android:layout_marginBottom="6dp"
-      android:layout_gravity="center_horizontal"
+      android:layout_marginTop="8dp"
+      android:layout_marginBottom="8dp"
+      android:layout_gravity="center"
       android:paddingLeft="4dp"
       android:paddingRight="16dp"
       android:drawableLeft="@drawable/dri_lyd_hvid"
-      android:text=" HØR P3 LIVE"
+      android:text=" HØR P3"
       android:textColor="@color/hvid"
       android:background="@drawable/knap_blaa_bg"/>
 
