--- a/DRRadiov3/res/values/deskclock_strings.xml
+++ b/DRRadiov3/res/values/deskclock_strings.xml
@@ -33,7 +33,7 @@
   <string name="alarm_repeat" msgid="7242985466344233206">"Gentag"</string>
   <string name="alert" msgid="6539852766423700221">"Ringetone"</string>
   <string name="time" msgid="8067216534232296518">"Tid"</string>
-  <string name="alarm_alert_dismiss_text" msgid="4942914605480888820">"Annuller"</string>
+  <string name="alarm_alert_dismiss_text" msgid="4942914605480888820">"ANNULLER"</string>
   <string name="alarm_alert_alert_silenced" msgid="2704775170733835993">"Alarmen dæmpes efter <xliff:g id="MINUTES">%d</xliff:g> minutter"</string>
   <string name="alarm_alert_snooze_text" msgid="1774416052207651584">"Slumretilstand"</string>
   <string name="alarm_alert_snooze_set" msgid="656470966696912087">"Slumrer i <xliff:g id="MINUTES">%d</xliff:g> minutter."</string>
@@ -92,9 +92,9 @@
     <item msgid="7809240121716151904">"25 minutter"</item>
     <item msgid="2807487305575255986">"30 minutter"</item>
   </string-array>
-  <string name="done" msgid="6509722361933858451">"Udfør"</string>
-  <string name="revert" msgid="9100911171235162926">"Annuller"</string>
-  <string name="delete" msgid="5732434972457000541">"Slet"</string>
+  <string name="done" msgid="6509722361933858451">"FÆRDIG"</string>
+  <string name="revert" msgid="9100911171235162926">"ANNULLER"</string>
+  <string name="delete" msgid="5732434972457000541">"SLET"</string>
   <string name="alarm_volume_title" msgid="8506245173912428522">"Lydstyrke for alarm"</string>
   <string name="alarm_volume_summary" msgid="8957440373896242438">"Angiv alarmernes lydstyrke"</string>
   <string name="silent_alarm_summary" msgid="8605302849408279221">"Lydløs"</string>
