--- a/DRRadiov3/res/values/dr_styles.xml
+++ b/DRRadiov3/res/values/dr_styles.xml
@@ -12,6 +12,7 @@
     <item name="android:windowActionBarOverlay">true</item>
     <item name="windowActionBarOverlay">true</item>
     -->
+    <item name="android:textColor">@color/sort</item>
   </style>
 
   <style name="ActionBar.Solid.Dr" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
