--- a/DRRadiov3/res/layout/hoved_akt.xml
+++ b/DRRadiov3/res/layout/hoved_akt.xml
@@ -1,11 +1,38 @@
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.dk.dr.radio.akt.Hovedaktivitet">
+
+  <android.support.v7.widget.Toolbar
+      xmlns:android="http://schemas.android.com/apk/res/android"
+      android:id="@+id/toolbar"
+      android:layout_height="?attr/actionBarSize"
+      android:layout_width="match_parent"
+      android:background="@color/grå70"
+      >
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:indeterminate="true"
+        android:visibility="visible" />
+
+  </android.support.v7.widget.Toolbar>
+
+
 <!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.dk.dr.radio.akt.Hovedaktivitet">
+    android:layout_height="0px"
+    android:layout_weight="1">
 
   <!-- As the main content view, the view below consumes the entire
        space available using match_parent in both dimensions. -->
@@ -26,7 +53,6 @@
 
     <TextView
         android:id="@+id/ingen_forbindelse"
-        android:animateLayoutChanges="true"
         android:background="#80ff0000"
         android:padding="8dp"
         android:drawableLeft="@drawable/dri_advarsel_graa40"
@@ -35,7 +61,10 @@
         android:shadowColor="@color/rød"
         android:shadowRadius="2"
         android:textSize="16dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginBottom="@dimen/afspiller_kollapset_højde"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_gravity="bottom"
         android:layout_width="match_parent" android:layout_height="wrap_content"/>
 
     <FrameLayout
@@ -75,3 +104,4 @@
       tools:layout="@layout/venstremenu_frag"/>
 
 </android.support.v4.widget.DrawerLayout>
+</LinearLayout>
