--- a/DRRadiov3/res/values-v11/dr_styles.xml
+++ b/DRRadiov3/res/values-v11/dr_styles.xml
@@ -12,13 +12,20 @@
     <item name="android:background">@color/grå70</item>
     <item name="android:displayOptions">showHome|useLogo</item>
   </style>
--->
 
-  <style name="Theme.Indstillinger" parent="android:style/Theme.Holo.Light">
-    <item name="android:windowBackground">@color/hvid</item>
+  <style name="ActionBar.Solid.Dr" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+    <item name="android:background">@color/grå70</item>
+    <item name="android:displayOptions">showHome|useLogo|showTitle</item>
+  </style>
+
+
+  <style name="Theme.Indstillinger" parent="@style/Theme.AppCompat.Light">
     <item name="android:windowNoTitle">false</item>
     <item name="android:windowActionBar">true</item>
     <item name="windowActionBar">true</item>
+    <item name="actionBarStyle">@style/ActionBar.Solid.Dr</item>
+    <item name="android:actionBarStyle">@style/ActionBar.Solid.Dr</item>
   </style>
+-->
 
 </resources>
